<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/nav_payment_method"
            android:title="@string/nav_payment" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/nav_notification"
            android:title="@string/nav_notification" />
        <item
            android:id="@+id/nav_free_rides"
            android:icon="@drawable/nav_free_ride"
            android:title="@string/nav_free_rides" />

        <item
            android:id="@+id/nav_ride_history"
            android:icon="@drawable/nav_ride_history"
            android:title="@string/nav_ride_history" />
        <item
            android:id="@+id/nav_promos"
            android:icon="@drawable/nav_promos"
            android:title="@string/nav_promos" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/nav_help"
            android:title="@string/nav_help" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/nav_setting"
            android:title="@string/nav_setting" />
    </group>
</menu>