<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.PhoneVerificationFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cLayoutPhoneVerification"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/what_s_the_code"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"

            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/sent_to_phone"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/tvSelectedPhoneNumber"
            app:layout_constraintStart_toStartOf="@+id/etCodeOne"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/tvSelectedPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="8"

            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <EditText
            android:id="@+id/etCodeOne"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="1"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/etCodeTwo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSelectedPhoneNumber" />

        <EditText
            android:id="@+id/etCodeTwo"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:ems="1"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/etCodeThree"
            app:layout_constraintStart_toEndOf="@+id/etCodeOne"
            app:layout_constraintTop_toTopOf="@+id/etCodeOne" />

        <EditText
            android:id="@+id/etCodeThree"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:ems="1"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/etCodeFour"
            app:layout_constraintStart_toEndOf="@+id/etCodeTwo"
            app:layout_constraintTop_toTopOf="@+id/etCodeTwo" />

        <EditText
            android:id="@+id/etCodeFour"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="1"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etCodeThree"
            app:layout_constraintTop_toTopOf="@+id/etCodeThree" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginTop="16dp"
            android:text="@string/not_received_code"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/btnCodeVerify"
            app:layout_constraintStart_toStartOf="@+id/etCodeOne"
            app:layout_constraintTop_toBottomOf="@+id/etCodeOne"
            tools:text="Not Received ?" />

        <TextView
            android:id="@+id/tvResendCode"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"

            android:text="@string/resend"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            tools:text="@string/resend_code" />

        <Button
            android:id="@+id/btnCodeVerify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btncodenext"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>